# yordam-agent

./: .gitignore  CO_WORKER_PLAN.md  DOCS.md  README.md  TUTORIAL.md  implementation-plan-yordam-coworker-2026-01-18.md  implementation-plan-yordam-coworker-integrated-2026-01-19.md  pyproject.toml
docs/coworker-runtime/: agent-loop.md  cli-contract.md  events.md  lifecycle.md  model-io-hardening.md  runbook.md  schema.md  scope-and-sequencing.md  skills-and-deliverables.md  task-bundle.md  ui-client-discovery.md
quickactions/: README.md  install.sh  reorg.sh  rewrite.sh
scripts/: install-documents-organizer.sh  install.sh
scripts/launchd/: README.md  com.yordam.agent.reorg.plist
src/yordam_agent/: ai_log.py  cli.py  config.py  documents_config.py  documents_organizer.py  ollama.py  organize.py  policy.py  policy_wizard.py  rename.py  rewrite.py  util.py
subplans/: implementation-plan-yordam-coworker-2026-01-18.md  implementation-plan-yordam-coworker-runtime-2026-01-18.md
tests/: test_ai_log.py  test_coworker_executor.py  test_coworker_launchd.py  test_coworker_policy.py  test_coworker_runtime_cancel.py  test_coworker_runtime_daemon.py  test_coworker_runtime_locks.py  test_coworker_runtime_logs.py  test_coworker_runtime_submit.py  test_coworker_summarize.py  test_coworker_task_bundle.py  test_coworker_task_store.py  test_coworker_web_tools.py  test_documents_organizer.py  test_ollama.py  test_organize.py  test_policy.py  test_policy_wizard.py  test_rename.py
tests/fixtures/: README.md  prompt_injection.summary.md  prompt_injection.txt  sample.summary.md  (+1 more)
(+19 files in other folders)
